--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,14 +14,14 @@ set(CMAKE_PREFIX_PATH "")
 set(CMAKE_PREFIX_PATH "${CMAKE_INSTALL_PREFIX}")
 
 # 安装第三方库
-#add_subdirectory(3rdparty)
+add_subdirectory(3rdparty)
 ## core
 #add_subdirectory(core)
 ## dealer
 #add_subdirectory(dealer)
 
 
-## xnp_core
+# xnp_core
 add_subdirectory(xnp_core)
 # xnp_dealer
 add_subdirectory(xnp_dealer)
