--- a/xnp_dealer/CMakeLists.txt
+++ b/xnp_dealer/CMakeLists.txt
@@ -29,6 +29,7 @@ target_link_libraries(${PROJECT_NAME}
         Qt5::Core
         Qt5::Widgets
         xnp-core
+        imm32
 )
 target_include_directories(${PROJECT_NAME} PUBLIC src)
 target_include_directories(${PROJECT_NAME} PUBLIC src/ui)
