--- a/xnp_core/CMakeLists.txt
+++ b/xnp_core/CMakeLists.txt
@@ -33,6 +33,9 @@ add_library(${PROJECT_NAME}
         ${BACKENDS_SOURCES}
         ${CODE_SOURCES}
 )
+set_target_properties(${PROJECT_NAME} PROPERTIES
+        MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>"
+)
 
 target_include_directories(${PROJECT_NAME} PUBLIC ${wxWidgets_INCLUDE_DIRS})
 target_link_libraries(${PROJECT_NAME} PUBLIC
