--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ set(CMAKE_INSTALL_PREFIX "${PROJECT_SOURCE_DIR}/install/${CMAKE_BUILD_TYPE}")
 ## 清空搜索库路径
 #set(CMAKE_PREFIX_PATH "")
 ## 设置搜索库路径
-set(CMAKE_PREFIX_PATH "${CMAKE_PREFIX_PATH}${CMAKE_INSTALL_PREFIX};")
+set(CMAKE_PREFIX_PATH "${CMAKE_PREFIX_PATH};${CMAKE_INSTALL_PREFIX}")
 
 # 安装第三方库
 #add_subdirectory(3rdparty)
