很完美的一版,to do 1,进行渲染性能调优,降低cpu与gpu使用率 2,原生控件堆叠测试 3,lua脚本测试 4,游戏开发,写个牌手端
Change-Id: I121b38ff88b7d33d8358b41575c8a0afbb9f8bac

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ set(CMAKE_INSTALL_PREFIX "${PROJECT_SOURCE_DIR}/install/${CMAKE_BUILD_TYPE}")
 ## 设置搜索库路径
 set(CMAKE_PREFIX_PATH "${CMAKE_INSTALL_PREFIX};${CMAKE_PREFIX_PATH}")
 
-# 安装第三方库
+# 3rdparty
 #add_subdirectory(3rdparty)
 ## xnp_core
 add_subdirectory(xnp_core)
