--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,5 +22,6 @@ set(CMAKE_PREFIX_PATH "${CMAKE_INSTALL_PREFIX};${CMAKE_PREFIX_PATH}")
 add_subdirectory(xnp_core)
 ## xnp_dealer
 add_subdirectory(xnp_dealer)
-
+## xnp_view
+add_subdirectory(xnp_view)
 
