--- a/xnp_view/CMakeLists.txt
+++ b/xnp_view/CMakeLists.txt
@@ -17,7 +17,7 @@ set(CODE_SOURCES
         src/ui/DImageWidget.h
 )
 
-add_executable(${PROJECT_NAME} ${CODE_SOURCES})
+add_executable(${PROJECT_NAME} WIN32 ${CODE_SOURCES} resources.rc)
 
 target_link_libraries(${PROJECT_NAME} PUBLIC
         Qt5::Widgets
@@ -25,9 +25,12 @@ target_link_libraries(${PROJECT_NAME} PUBLIC
 
 add_custom_target(copy_resources ALL
         COMMAND ${CMAKE_COMMAND} -E copy_directory
+        "${CMAKE_SOURCE_DIR}/3rdparty/binary-library/win64/runtime" "${CMAKE_CURRENT_BINARY_DIR}"
+        COMMAND ${CMAKE_COMMAND} -E copy_directory
         "${PROJECT_SOURCE_DIR}/resources" "${CMAKE_CURRENT_BINARY_DIR}/resources"
         COMMAND ${CMAKE_COMMAND} -E copy
         "${PROJECT_SOURCE_DIR}/resources/config.ini" "${CMAKE_CURRENT_BINARY_DIR}"
+        COMMENT "Copying resources to the build directory"
         VERBATIM
 )
 add_dependencies(${PROJECT_NAME} copy_resources)
