--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,7 @@ set(CMAKE_PREFIX_PATH "${CMAKE_INSTALL_PREFIX};${CMAKE_PREFIX_PATH}")
 # xnp_dealer
 #add_subdirectory(xnp_dealer)
 # xnp_view
-add_subdirectory(xnp_view)
+#add_subdirectory(xnp_view)
 # xnp_tun
 #add_subdirectory(xnp_tun)
 # xnp_mcall
